# C_SDL_GAME

./: .gitignore  CHANGELOG  ChangeLog  Makefile  Makefile.am  README  README.md  autogen.sh  configure.ac  const.h  game.c  game.h  level.c  level.h  levels.txt  main.c  menu.c  menu.h  preferences.ini  sprites.c  sprites.h
data/: Makefile.am  sokorobot.desktop
data/img/: Makefile.am
data/levels/: Makefile.am  Microban-2.slc  Sasquatch-7.slc  Sasquatch-8.slc
inc/: const.h  game.h  level.h  level_decor.h  menu.h  menu_text.h  mouse.h  move.h  settings.h  slc.h  sprites.h
levels/: Microban-1.slc  Microban-3.slc  Microban-4.slc  Sasquatch-1.slc  Sasquatch-10.slc  Sasquatch-11.slc  Sasquatch-2.slc  Sasquatch-3.slc  Sasquatch-4.slc  Sasquatch-5.slc  Sasquatch-6.slc  Sasquatch-9.slc  SokoForth.slc  SokoForth.slc.1  SokoRobot.slc
locale/fr/: sokorobot.po
po/: POTFILES.in  fr.po
src/: Makefile.am  const.h  files.c  files.h  game.c  level.c  level_decor.c  main.c  menu.c  menu_text.c  mouse.c  mouse.h  move.c  move.h  settings.c  settings.h  slc.c  slc.h  sprites.c  sprites.h
