imgdir=$(datadir)/img

img_DATA= original/box_ok.png \
	original/box_ok.png \
	original/box.png   \
	original/box.png \
	original/button_about.png \
	original/button_arrow_l.png \
	original/button_arrow_p.png \
	original/button_backwards.png \
	original/button_checked.png \
	original/button_check.png \
	original/button_file.png \
	original/button_levels.png \
	original/button_reset.png \
	original/button_settings.png \
	original/button_shortcuts.png \
        original/congrats_background.png \
	original/cornerBottom-Left.png  \
	original/cornerBottom-Right.png \
	original/cornerTop-Left.png \
	original/cornerTop-Right.png \
	original/menu_bar.png \
	original/menu_bottom.png \
	original/menu_circle.png \
	original/menu_highlighter.png \
	original/menu_h_line.png \
	original/menu_overText.png \
	original/menu_ribbon.png \
	original/menu_square.png \
	original/menu_top_light.png \
	original/outside2.png  \
	original/outside3.png \
	original/outside4.png \
	original/outside.png \
	original/player_back.png \
	original/player_front.png \
	original/player_left.png \
	original/player_right.png \
	original/progress.png \
	original/target.png \
	original/tile1.png \
	original/tile2.png \
	original/tile3.png \
	original/tile_goal.png \
	original/wall1.png \
	original/wall2.png \
	original/wall3.png \
	original/wall4.png \
	original/wallBorderBottom.png \
	original/wallBorderLeft.png \
	original/wallBorderRight.png \
	original/wallBorderTop.png

EXTRA_DIST = $(img_DATA)
