levelsdir = $(prefix)/games/@PACKAGE@/data/levels

levels_DATA= Microban-1.slc \
	Microban-2.slc \
	Microban-3.slc \
	Microban-4.slc \
	Sasquatch-10.slc \
	Sasquatch-11.slc \
	Sasquatch-1.slc \
	Sasquatch-2.slc \
	Sasquatch-3.slc \
	Sasquatch-4.slc \
	Sasquatch-5.slc \
	Sasquatch-6.slc \
	Sasquatch-7.slc \
	Sasquatch-8.slc \
	Sasquatch-9.slc \
	SokoForth.slc \
	SokoRobot.slc

EXTRA_DIST = $(levels_DATA)
